# Witness

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.waldrain  Makefile  README.md  SCOREBOARD.md  VERIFICATION.md  WHAT_WE_BUILT.txt  go.mod  go.sum  manifest.json  plan.md  synthgen.py
.github/workflows/: ci.yml
agentlab/: agent.go  agentlab_test.go  main.go  planner.go  report.go  scenes.go  scripts.go  witness.go
cmd/gate/: approval_handlers.go  auth.go  auth_test.go  github_payload.go  http.go  main.go  receipts.go  server.go  server_test.go  startup_test.go
cmd/hubbleops/: demo.go  main.go  main_test.go  phase4_demo.go
cmd/loopreplay/: main.go
cmd/proxy/: main.go
cmd/waldrain/: drain_test.go  main.go
cmd/witness/: demo.go  demo_test.go  main.go  main_test.go
configs/: proxy.yaml  proxy.yaml.example
deploy/: docker-compose.yml  minio-objectlock-compose.yml
docs/: AUTH.md  CONFIG_SAFETY.md  DETECTION_ACCURACY.md  DETECTION_QUALITY_REPORT.md  INSTALL.md  PREFLIGHT_REDTEAM.md  QUICKSTART.md  RECEIPT_INVARIANT.md  ROADMAP-SIGNERS.md  S3_OBJECT_LOCK_ANCHOR.md  TROUBLESHOOTING.md
internal/actionreceipt/: write.go  write_test.go
internal/approval/: apply.go  service.go  slack.go  store.go  store_test.go
internal/attribution/: normalizer.go  normalizer_test.go
internal/auth/: keys.go  keys_test.go  middleware.go  middleware_test.go  store.go
internal/config/: config.go  config_test.go  safety.go  safety_test.go
scripts/: check-prereqs.sh
sdk/python/: README.md  pyproject.toml
sdk/python/hubbleops_agent/: __init__.py  langchain.py
sdk/python/witness_agent/: __init__.py  langchain.py
(+193 files in other folders)
