[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "witness-agent"
version = "0.0.0"
description = "Fail-open Witness action firewall SDK for Python agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Witness" }]
keywords = ["ai", "agents", "safety", "idempotency", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/witness-proxy/witness-proxy"

[tool.hatch.build.targets.wheel]
packages = ["witness_agent"]
